--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <outputFile>E:\Clients\FoliumConstruct\Server\plugins\${project.name}-v${project.version}.jar</outputFile>
                         </configuration>
                     </execution>
                 </executions>
