--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,9 @@ name: DeathHolding
 version: '${project.version}'
 main: me.akagiant.deathholding.Main
 api-version: 1.18
+
+commands:
+  reset:
+    description: lol
+  clear:
+    description: lol
