--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,11 @@ name: DeathHolding
 version: '${project.version}'
 main: me.akagiant.deathholding.Main
 api-version: 1.18
+
+permissions:
+  DeathHolding.Revive:
+    description: Bypass the revival stage of this plugin.
+  DeathHolding.Bypass:
+    description: Needed in order to be able to revive another player.
+  DeathHolding.Cooldown.Bypass:
+    description: Needed in ordet to bypass the cooldown timer.
