--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,16 +13,21 @@ Revival:
     Effect1:
       Type: REGENERATION
       Duration: 5
-      Strength: 3
-  Item:
+      Strength: 2
+    Effect2:
+      Type: SPEED
+      Duration: 3
+      Strengt: 10
+  Itemit:
     isCustom: false
     # If isCustom is set to false, custom-item will be ignored and the default-item will be used.
     # You can use the command /revival give %target% %amount% to spawn in a custom revival item
     custom-item:
-      displayName: "REVIVAL APPLE"
+      type: GOLDEN_CARROT
+      displayName: "&a&lREVIVAL APPLE"
       lore:
         - " "
-        - "&7Right-Click Someone to revive them"
+        - "&7&oRight-Click Someone to revive them"
       isEnchanted: true
     default-item: GOLDEN_APPLE
   Message:
@@ -37,3 +42,22 @@ Revival:
     Time: 30
     Message:
       - "Cooldown: %player_cooldown%"
+Dying:
+  # The title above a player when they are dying
+  Title: "&8[&c&lDYING&8] &f%player_name%"
+  # How long should a player be "dying" for (seconds)
+  TimeToRevive: 5
+  # The Health a player should have when they go into the dying state
+  Health: 6
+  # The Sound played when a player is put into the dying state
+  # https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Sound.html
+  SoundEffects:
+    Sound1: ITEM_TOTEM_USE
+  # The potion effect given to a player when revived
+  # https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/potion/PotionEffectType.html
+  # Potion effects are removed if a player dies or is revived from the dying state.
+  PotionEffects:
+    Effect1:
+      Type: BLINDNESS
+      Duration: 60
+      Strength: 100
